Updating config to use edurepo container