@@ -1,21 +1,9 @@
-FROM harbor.usu.edu/banner/base-bannerselfservice:oraclelinux6-tomcat8-java8
+FROM edurepo/banner9-selfservice:tomcat8-jre8-alpine
 MAINTAINER "Eric Allen <eric.allen@usu.edu>"
 
-ENV JAVA_OPTS -Duser.timezone=\$TIMEZONE \
-    -Xms\$XMS -Xmx\$XMX \
-    -XX:MaxPermSize=\$MAXPERMSIZE -Dbanproxy.jdbc.url=\$BANPROXY_JDBC_URL \
-    -Dbanproxy.password=\$BANPROXY_PASSWORD \
-    -Dbanproxy.initialsize=\$BANPROXY_INITIALSIZE \
-    -Dbanproxy.maxactive=\$BANPROXY_MAXACTIVE \
-    -Dbanproxy.maxidle=\$BANPROXY_MAXIDLE \
-    -Dbanproxy.maxwait=\$BANPROXY_MAXWAIT \
-    -Dbanssuser.jdbc.url=\$BANSSUSER_JDBC_URL \
-    -Dbanssuser.password=\$BANSSUSER_PASSWORD \
-    -Dbanssuser.initialsize=\$BANSSUSER_INITIALSIZE \
-    -Dbanssuser.maxactive=\$BANSSUSER_MAXACTIVE \
-    -Dbanssuser.maxidle=\$BANSSUSER_MAXIDLE \
-    -Dbanssuser.maxwait=\$BANSSUSER_MAXACTIVE \
-    -Dcas.serverurlprefix=\$GRAILS_PLUGIN_SPRINGSECURITY_CAS_SERVERURLPREFIX \
-    -Dserver.name=\$GRAILS_PLUGIN_SPRINGSECURITY_CAS_SERVERNAME
+LABEL financeselfservice=9.1.1
 
-COPY FinanceSelfService.war /usr/local/tomcat/webapps/FinanceSelfService.war
+ENV BANNER_ANALYSTICS_ALLOWELLUCIANTRACKER=false \
+    TIMEZONE=America\Denver
+
+COPY FinanceSelfService /usr/local/tomcat/webapps/FinanceSelfService
